k8s/idp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: idp
  labels:
    kubernetes.io/metadata.name: idp
