k8s/idp/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: idp
spec:
  selector:
    app: keycloak
  ports:
    - port: 80
      targetPort: 8080
